unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/ffps_ihs__FfInterfaceSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>FF Interface Settings</label>
</CustomObject>