unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__BatchEmail__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__BatchEmail__c</fullName>
    <description>Email address to send batch email completion to, if none populated then none sent.</description>
    <inlineHelpText>Email address to send batch email completion to, if none populated then none sent.</inlineHelpText>
    <label>Batch Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>