unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__BufferOutput__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__BufferOutput__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set to prevent debugger printing immediately to debug log. Debug is automatically buffered when email or persisted log is selected.</description>
    <inlineHelpText>Set to prevent debugger printing immediately to debug log. Debug is automatically buffered when email or persisted log is selected.</inlineHelpText>
    <label>Buffer Output</label>
    <type>Checkbox</type>
</CustomField>