unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__ControlRefreshInterval__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__ControlRefreshInterval__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Delay between refreshes of integration control (in seconds).</description>
    <inlineHelpText>Delay between refreshes of integration control (in seconds).</inlineHelpText>
    <label>Control Refresh Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>