unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__DebugEmail__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__DebugEmail__c</fullName>
    <label>Debug Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>