unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__IncludeRecords__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__IncludeRecords__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set to include content of lists.</description>
    <inlineHelpText>Set to include content of lists.</inlineHelpText>
    <label>Include Records</label>
    <type>Checkbox</type>
</CustomField>