unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__OrgName__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__OrgName__c</fullName>
    <description>Identifier to distinguish different email communications.</description>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>