unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__PrettyPrint__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__PrettyPrint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pretty Print</label>
    <type>Checkbox</type>
</CustomField>