unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__SpecificCollectionsToDisplay__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__SpecificCollectionsToDisplay__c</fullName>
    <description>When records are being displayed, this comma separated list determines which statements to include the content.  Default is all when blank.</description>
    <inlineHelpText>When records are being displayed, this comma separated list determines which statements to include the content.  Default is all when blank.</inlineHelpText>
    <label>Specific Collections to Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>