unpackaged/main/default/objects/ffps_ihs__FfInterfaceSettings__c/fields/ffps_ihs__WriteToLogObject__c.field-meta.xml
<CustomField>
    <fullName>ffps_ihs__WriteToLogObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Write to Log Object</label>
    <type>Checkbox</type>
</CustomField>